# ember

./: .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
boot/: efi.ld  efi_entry.S  efi_main.c  uefi_call.S
include/: boot_info.h  uefi_min.h
include/ember/: acpi.h  ahci.h  ata.h  bkl.h  blkcache.h  blkdev.h  bug.h  console.h  cpu.h  desc.h  e1000.h  elf.h  ext2.h  ext2_internal.h  fat32.h  fbcon.h  fd.h  gpt.h  heap.h  io.h  ioapic.h  irq.h  isr.h  kexec.h  klib.h  lapic.h  linux_boot.h  mmu.h  netdev.h  paging.h  pci.h  percpu.h  pipe.h  pmm.h  proc.h  ramdisk.h  sched.h  signal.h  smp.h  spinlock.h  (+7 more)
include/ember/net/: arp.h  eth.h  icmp.h  inet.h  ipv4.h
kernel/: kernel.ld  kexec.c  klib.c  kmain.c  pipe.c  proc.c  sched.c  syscall.c  syscall_file.c  syscall_file_io.c  syscall_file_ops.c  syscall_fs.c  syscall_fs_mod.c  syscall_fs_path.c  syscall_fs_perm.c  syscall_fs_stat.c  syscall_helpers.c  syscall_helpers.h  syscall_id.c  syscall_misc.c  syscall_mm.c  syscall_pipe.c  syscall_poll.c  syscall_proc.c  syscall_proc_exec.c  syscall_proc_exit.c  syscall_proc_fd.c  syscall_proc_fork.c  syscall_proc_wait.c  syscall_sig.c  syscall_time.c
kernel/arch/x86_64/: acpi.c  ap_trampoline.c  gdt.c  gdt_entry.S  idt.c  ioapic.c  isr.c  isr_entry.S  kexec_entry.S  lapic.c  paging.c  smp.c  switch.S  syscall.c  syscall_entry.S  timer.c  tss_entry.S  user.S
kernel/console/: console.c  fbcon.c  serial.c
kernel/dev/: ahci.c  ata.c  blkcache.c  blkdev.c  e1000.c  gpt.c  irq.c  netdev.c  pci.c  ramdisk.c
kernel/fs/: cpio.c  ext2.c  ext2_block.c  ext2_dir.c  ext2_inode.c  ext2_io.c  ext2_ops.c  fat32.c  fd.c  vfs.c  vfs_cache.c  vfs_lookup.c
kernel/mm/: heap.c  pmm.c
kernel/net/: arp.c  arp_cache.c  eth.c  icmp.c  inet_csum.c  ipv4.c
kernel/user/: elf.c  user.c
models/: .gitignore  README.md  TODO.md  ap_boot_contention.pml  ap_boot_full.pml  ap_boot_overflow.pml  ap_boot_race.pml  ap_boot_slot_race.pml  ap_boot_twophase.pml  ap_gdt_alloc.pml  arp_cache.pml  bkl.pml  bkl_sched.pml  bkl_sched_fixed.pml  bkl_sched_v3.pml  bkl_sched_v4.pml  bkl_sched_v5.pml  bkl_sched_v6.pml  bkl_sched_v7.pml  bkl_sched_v8.pml  bkl_sched_v9.pml  blkcache_evict_race.pml  bucket_drain.pml  cow_vma_prot.pml  e1000_rx_ring.pml  elf_overlap.pml  exec.pml  exec_pml4_leak.pml  exec_signal_race.pml  exit_isr_bkl_bypass.pml  exit_stop.pml  fd_refcount_race.pml  fork_cow_tlb_multipage.pml  fpu.pml  gs_kstack_full.pml  gs_kstack_race.pml  gs_segment_load.pml  heap_coalesce.pml  iretq_stack.pml  irq_dispatch_bkl.pml  (+36 more)
scripts/: build_test.sh  build_test_ext2efi.sh  check_stack_usage.sh  compile_kernel.sh  compile_m2.sh  e1000_icmp_check.py  mk_esp.sh  mkext2img-tcc.sh  mkext2img.sh  mkinitrd.sh  run_e1000_icmp.sh  run_fresh.sh  run_qemu.sh  run_qemu_fb.sh  run_test.sh
tests/: fd_checker.c  hello.c  hello_pie.c  hello_tcc.c  init_append.c  init_boot.c  init_brk.c  init_chdir.c  init_contention.c  init_cow.c  init_cow_signal.c  init_cowfork.c  init_cpio.c  init_deep_exec.c  init_deep_path.c  init_e1000_icmp.c  init_exec_adv.c  init_exec_edge.c  init_exec_env.c  init_ext2.c  init_ext2_concurrent.c  init_ext2_smp.c  init_ext2_stress.c  init_ext2_tcc.c  init_fd_exec.c  init_fd_ops.c  init_fork_stress.c  init_ftruncate.c  init_fuzz_expanded.c  init_getdents.c  init_hardlink.c  init_identity.c  init_io_misc.c  init_iovec.c  init_irqtest.c  init_kexec.c  init_kexec_memfd.c  init_large_file.c  init_lseek.c  init_m2libc.c  (+53 more)
tests/host/: test_arp_cache.c  test_inet_csum.c  test_netdev.c
tools/: elf2efi.c  ember-ld.c  kexec-ember.c  make_initrd.c
user/: kexec-linux.c
